--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 						<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello! This is Slake</span>
-								<h1 class="mb-4 mt-3">Marketing, Advertising&amp; <span>Branding </span> Agency</h1>
-								<p><a href="#" class="btn btn-primary">Hire us</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<h1 class="mb-4 mt-3">Website and Mobile Application&amp; <span>Development </span> Company</h1>
+								<p><a href="#" class="btn btn-primary">Check Out</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
 					</div>
@@ -73,7 +73,7 @@
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">We Promote &amp; Build Brands</span>
-								<h1 class="mb-4 mt-3">Hi, we are <span>Slake</span> This is our favorite work.</h1>
+								<h1 class="mb-4 mt-3">Hi, we are <span>Slake,</span> Here is what we do.</h1>
 								<p><a href="#" class="btn btn-primary">Hire us</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
