--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>slake.com</title>
+	<title>SLAKE: The No.1 Global IT solution company</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -17,6 +17,20 @@
 	
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
+
+	<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/645c8ac66a9aad4bc57a145b/1h04ns6ho';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	
@@ -35,8 +49,8 @@
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
-					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>Partners</span></a></li>
+					<li class="nav-item"><a href="https://slake.tawk.help" class="nav-link"><span>Contact</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -54,8 +68,8 @@
 						<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello! This is Slake</span>
-								<h1 class="mb-4 mt-3">Website and Mobile Application&amp; <span>Development </span> Company</h1>
-								<p><a href="#" class="btn btn-primary">Check Out</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<h1 class="mb-4 mt-3">Website and Mobile Application <span>Development </span> Company</h1>
+								<p><a href="#" class="btn btn-primary">Our Projects</a> <a href="#" class="btn btn-primary btn-outline-primary">Hire Us</a></p>
 							</div>
 						</div>
 					</div>
@@ -72,9 +86,9 @@
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
-								<span class="subheading">We Promote &amp; Build Brands</span>
-								<h1 class="mb-4 mt-3">Hi, we are <span>Slake,</span> Here is what we do.</h1>
-								<p><a href="#" class="btn btn-primary">Hire us</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<span class="subheading">We provide IT solutions &amp; and assist Web3 Brands</span>
+								<h1 class="mb-4 mt-3">We offer high quality services at <span>Slake,</span></h1>
+								<p><a href="#" class="btn btn-primary">Our Projects</a> <a href="#" class="btn btn-primary btn-outline-primary">Hire Us</a></p>
 							</div>
 						</div>
 					</div>
@@ -150,15 +164,16 @@
 							<div class="col-md-12 heading-section ftco-animate">
 								<span class="subheading">Intro</span>
 								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">About Us</h2>
-								<p>We help and assist you in the Marketing/Advertising aspect of your Business, Product, and Company, giving you a high assurance and guarantee of a positive result.</p>
+								<p>Slake is a leading IT solution company that assists small businesses to Big brands in creating and developing Websites, Mobile Application and even possible online and offline systematic operation, that would give your brand an amazing look and impression online.
+									<br> Slake has a global delivery center in Nigeria, Kenya, USA, Canada, Brasil, and West Africa at large.</p>
 
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Company:</span> <span>Slake</span></li>
-									<li class="d-flex"><span>Services:</span> <span>Marketing/Advertising, Branding, Web/Applcation Designing</span></li>
+									<li class="d-flex"><span>Company:</span> <span>SLAKE</span></li>
+									<li class="d-flex"><span>Services:</span> <span>Global IT Solution</span></li>
 									<li class="d-flex"><span>Address:</span> <span>Lagos, Nigeria.</span></li>
 									<li class="d-flex"><span>Country code:</span> <span>+234</span></li>
 									<li class="d-flex"><span>Email:</span> <span>slakeservice@gmail.com</span></li>
-									<li class="d-flex"><span>Company size: </span> <span>250+ Employee's</span></li>
+									<li class="d-flex"><span>Company size: </span> <span>20+ Employee's</span></li>
 								</ul>
 							</div>
 							<!-- <div class="col-md-12">
@@ -202,13 +217,13 @@
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<span class="subheading">Skills</span>
 					<h2 class="mb-4">Our Skills</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>We have professionals who can handle your works, offering the best of their skills to make your work exceed your expectation.</p>
 				</div>
 			</div>
 			<div class="row progress-circle mb-5">
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4">Blockchain/Web3 App</h2>
 
 						<!-- Progress bar 1 -->
 						<div class="progress mx-auto" data-value='95'>
@@ -239,7 +254,7 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4">Blockchain/Web3 Website</h2>
 
 						<!-- Progress bar 1 -->
 						<div class="progress mx-auto" data-value='98'>
@@ -270,7 +285,7 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4">Graphic Design</h2>
 
 						<!-- Progress bar 1 -->
 						<div class="progress mx-auto" data-value='68'>
@@ -301,7 +316,7 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">Photoshop</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4"> 2D/3D NFT designs</h2>
 
 						<!-- Progress bar 1 -->
 						<div class="progress mx-auto" data-value='92'>
@@ -332,7 +347,7 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">WordPress</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4">Community Management</h2>
 
 						<!-- Progress bar 1 -->
 						<div class="progress mx-auto" data-value='83'>
@@ -363,7 +378,71 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">SEO</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4">Content Creation</h2>
+
+						<!-- Progress bar 1 -->
+						<div class="progress mx-auto" data-value='95'>
+							<span class="progress-left">
+								<span class="progress-bar border-primary"></span>
+							</span>
+							<span class="progress-right">
+								<span class="progress-bar border-primary"></span>
+							</span>
+							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+								<div class="h2 font-weight-bold">95<sup class="small">%</sup></div>
+							</div>
+						</div>
+						<!-- END -->
+
+						<!-- Demo info -->
+						<div class="row text-center mt-4">
+							<div class="col-6 border-right">
+								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
+							</div>
+							<div class="col-6">
+								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
+							</div>
+						</div>
+						<!-- END -->
+					</div>
+				</div>
+
+				
+				<div class="col-lg-4 mb-4">
+					<div class="bg-white rounded-lg shadow p-4">
+						<h2 class="h5 font-weight-bold text-center mb-4">Video Editing</h2>
+
+						<!-- Progress bar 1 -->
+						<div class="progress mx-auto" data-value='95'>
+							<span class="progress-left">
+								<span class="progress-bar border-primary"></span>
+							</span>
+							<span class="progress-right">
+								<span class="progress-bar border-primary"></span>
+							</span>
+							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+								<div class="h2 font-weight-bold">91<sup class="small">%</sup></div>
+							</div>
+						</div>
+						<!-- END -->
+
+						<!-- Demo info -->
+						<div class="row text-center mt-4">
+							<div class="col-6 border-right">
+								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
+							</div>
+							<div class="col-6">
+								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
+							</div>
+						</div>
+						<!-- END -->
+					</div>
+				</div>
+
+				
+				<div class="col-lg-4 mb-4">
+					<div class="bg-white rounded-lg shadow p-4">
+						<h2 class="h5 font-weight-bold text-center mb-4">Social Media Management</h2>
 
 						<!-- Progress bar 1 -->
 						<div class="progress mx-auto" data-value='95'>
@@ -399,9 +478,9 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-					<span class="subheading">We are grat at</span>
+					<span class="subheading">We specialize in...</span>
 					<h2 class="mb-4">We give awesome services to our clients</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>Hello, here is what we specialize in, as we provide the best of services in these specialties.</p>
 				</div>
 			</div>
 
@@ -411,7 +490,7 @@
 						<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-3d-design"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Web Design</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>We have created over 300 website designs in the past one year.</p>
 						</div>
 					</div> 
 				</div>
@@ -420,7 +499,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-app-development"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Web Application</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>We have created over 100 web applications in the past one year.</p>
 						</div>
 					</div> 
 				</div>
@@ -429,7 +508,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-web-programming"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Web Development</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>We have developed over 200 Websites in the past one year.</p>
 						</div>
 					</div> 
 				</div>
@@ -438,7 +517,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-branding"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Banner Design</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>We have designed over 5000 banners in the past one year.</p>
 						</div>
 					</div> 
 				</div>
@@ -450,7 +529,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-computer"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Branding</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>We have handled the branding process of over 20 businesses.</p>
 						</div>
 					</div> 
 				</div>
@@ -459,7 +538,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-vector"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Icon Design</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>We provide icon designs when providing our IT services.</p>
 						</div>
 					</div> 
 				</div>
@@ -468,7 +547,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-vector"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Graphic Design</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>We create amazing graphic designs to illustrate your ideas.</p>
 						</div>
 					</div> 
 				</div>
@@ -477,7 +556,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-zoom"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">SEO</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>Our SEO service are the best as it is accurate and efficient.</p>
 						</div>
 					</div> 
 				</div>
@@ -491,8 +570,8 @@
 				<div class="col-md-8 col-lg-8 d-flex align-items-center">
 					<div class="w-100 py-4">
 						<h2>Have a project on your mind.</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly.</p>
-						<p class="mb-0"><a href="#" class="btn btn-white py-3 px-4">Contact me</a></p>
+						<p>Trust us with your projects, as our experts handles your work with their professional skills.</p>
+						<p class="mb-0"><a href="https://slake.tawk.help" class="btn btn-white py-3 px-4">Contact Us</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-lg-4 d-flex align-items-end">
@@ -508,7 +587,7 @@
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<span class="subheading">Accomplishments</span>
 					<h2 class="mb-4">Our Projects</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>We have handled over 1000 different project</p>
 				</div>
 			</div>
 			<div class="row">
@@ -798,7 +877,7 @@
 								<span class="fa fa-map-marker"></span>
 							</div>
 							<div class="text">
-								<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+								<p><span>Address:</span> Lagos state, Nigeria.</p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -806,7 +885,7 @@
 								<span class="fa fa-phone"></span>
 							</div>
 							<div class="text">
-								<p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+								<p><span>Phone:</span> <a href="tel://2347035218713">+234 703-5218-713</a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -814,7 +893,7 @@
 								<span class="fa fa-paper-plane"></span>
 							</div>
 							<div class="text">
-								<p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+								<p><span>Email:</span> <a href="mailto:slakeservice@gmail.com">slakeservice@gmail.com</a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -822,7 +901,7 @@
 								<span class="fa fa-globe"></span>
 							</div>
 							<div class="text">
-								<p><span>Website</span> <a href="#">yoursite.com</a></p>
+								<p><span>Website</span> <a href="https://home.slake.com.ng">slake.com.ng</a></p>
 							</div>
 						</div>
 					</div>
@@ -838,20 +917,20 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Lets talk about</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#" class="btn btn-primary">Learn more</a></p>
+						<h2 class="ftco-heading-2">Lets work with you...</h2>
+						<p>Lets our professionals handle your IT project, as you would be offered the best of services.</p>
+						<p><a href="https://home.slake.com.ng" class="btn btn-primary">Learn more</a></p>
 					</div>
 				</div>
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4 ml-md-4">
 						<h2 class="ftco-heading-2">Links</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Home</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Projects</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
+							<li><a href="#home-section"><span class="fa fa-chevron-right mr-2"></span>Home</a></li>
+							<li><a href="#about-section"><span class="fa fa-chevron-right mr-2"></span>About</a></li>
+							<li><a href="#services-section"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
+							<li><a href="#projects-section"><span class="fa fa-chevron-right mr-2"></span>Projects</a></li>
+							<li><a href="https://slake.tawk.help"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -882,6 +961,8 @@
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
 							<li class="ftco-animate"><a href="https://instagram.com/chidileozoemena"><span class="fa fa-instagram"></span></a></li>
 							<li class="ftco-animate"><a href="https://linkedin.com/chidile_ozoemena"><span class="fa fa-linkedin"></span></a></li>
+							<li class="ftco-animate"><a href="https://linkedin.com/chidile_ozoemena"><span class="fa fa-discord"></span></a></li>
+
 						</ul>
 					</div>
 				</div>
@@ -916,7 +997,8 @@
 		<script src="js/scrollax.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 		<script src="js/google-map.js"></script>
-		
+		<script src="js/jquery.chat.js"></script>
+
 		<script src="js/main.js"></script>
 		
 	</body>
